samples/_failures_safe/1761043433_d00a17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54608930.c: In function ‘main’:
./samples/SAFE/__tmp_54608930.c:124:5: error: expected expression at end of input
  124 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_54608930.c:124:5: error: expected declaration or statement at end of input
